Update index.html to enhance layout and content for personal website

--- a/index.html
+++ b/index.html
@@ -3,11 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Raqeeb's Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            background-color: #f5f5f5;
+            color: #333;
+        }
+        header {
+            background-color: #4b6cb7;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+        section {
+            background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            margin-bottom: 20px;
+        }
+        footer {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 0.9rem;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <h1>Hello World, I am Raqeeb</h1>
+        <p>Welcome to my personal website</p>
+    </header>
 
-    <h1>Hello World, I am Raqeeb</h1>
-    
+    <section>
+        <h2>About Me</h2>
+        <p>This is a simple webpage where I can share information about myself and my interests.</p>
+        <p>I'm passionate about [your interests here] and enjoy [your hobbies here].</p>
+    </section>
+
+    <section>
+        <h2>My Projects</h2>
+        <ul>
+            <li>Project 1: Description of your first project</li>
+            <li>Project 2: Description of your second project</li>
+            <li>Project 3: Description of your third project</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Contact Me</h2>
+        <p>Email: your.email@example.com</p>
+        <p>LinkedIn: linkedin.com/in/yourusername</p>
+        <p>GitHub: github.com/yourusername</p>
+    </section>
+
+    <footer>
+        &copy; 2025 Raqeeb. All rights reserved.
+    </footer>
 </body>
 </html>
